--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,16 @@
 body {
 	margin: 0px;
 }
+
+h1 {
+	text-align: center;
+}
+
+.container {
+	width: 90%;
+	max-width: 50%;
+}
+
+.elephants {
+	width: 100%;
+}
