--- a/styles.css
+++ b/styles.css
@@ -7,10 +7,20 @@ h1 {
 }
 
 .container {
-	width: 90%;
+	width: 50%;
 	max-width: 50%;
+	border-top: 3px solid green;
 }
 
 .elephants {
 	width: 100%;
+}
+
+.cols {
+	display: flex;
+	border: 3px solid magenta;
+}
+
+.col {
+	border: 3px solid yellow;
 }
