--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,21 @@
 body {
 	margin: 0;
+	font-size: 1.125rem;
 	font-family: 'Roboto', sans-serif;
 }
 
 h1 {
 	text-align: center;
+	font-size: 3rem;
+}
+
+h2 {
+	font-size: 1.5rem;
 }
 
 .container {
 	width: 90%;
-	max-width: 70%;
+	max-width: 980px;
 	margin: 0 auto;
 	/* border: 5px solid green; */
 }
@@ -26,5 +32,5 @@ h1 {
 
 .col {
 	padding: 0.5em;
-	border: 5px solid yellow;
+	/* border: 5px solid yellow; */
 }
