--- a/styles.css
+++ b/styles.css
@@ -13,15 +13,17 @@ h2 {
 	font-size: 1.5rem;
 }
 
+/* Layout */
+
+.elephants {
+	max-width: 100%;
+}
+
 .container {
 	width: 90%;
 	max-width: 980px;
 	margin: 0 auto;
 	/* border: 5px solid green; */
-}
-
-.elephants {
-	width: 100%;
 }
 
 .cols {
