--- a/styles.css
+++ b/styles.css
@@ -44,3 +44,9 @@ h2 {
 	padding: 0.5em;
 	/* border: 5px solid yellow; */
 }
+
+.col-bg {
+	background: #312614;
+	color: #fff;
+	padding: 0 1em;
+}
