--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,10 @@ h2 {
 	font-size: 1.5rem;
 }
 
+p {
+	margin-top: 0;
+}
+
 /* Layout */
 
 .elephants {
@@ -37,7 +41,7 @@ h2 {
 .cols {
 	display: flex;
 	/* border: 5px solid magenta; */
-	margin: .5em 0;
+	margin: 1em 0;
 }
 
 .col {
@@ -48,5 +52,5 @@ h2 {
 .col-bg {
 	background: #312614;
 	color: #fff;
-	padding: 0 1em;
+	padding: 1em;
 }
