--- a/styles.css
+++ b/styles.css
@@ -3,10 +3,10 @@ body {
 	font-size: 1.125rem;
 	color: #707070;
 	font-family: 'Roboto', sans-serif;
-	background: pink;
+	/* background: pink; */
 }
 
-@media (min-width: 650px) {
+/* @media (min-width: 650px) {
 	body {
 		background: orange;
 	}
@@ -16,7 +16,7 @@ body {
 	body {
 		background: magenta;
 	}
-}
+} */
 
 /* Typography */
 
