--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body {
 	margin: 0;
+	margin-top: 14em;
 	font-size: 1.125rem;
 	color: #707070;
 	font-family: 'Roboto', sans-serif;
@@ -31,14 +32,18 @@ header {
 
 .header {
 	border: 2px solid magenta;
+	max-width: 50%;
+	margin: 0 auto;
+	text-align: center;
 }
 
 nav {
 	border: 2px solid magenta;
 }
 
-.text-accent {
+li, a {
 	color: red;
+	list-style: none;
 }
 
 h1 {
